test/tests/operators/load_balance/error_expected_variable.txt
error: expected a `$`-variable
 --> tests/operators/load_balance/error_expected_variable.tql:7:14
  |
7 | load_balance "alpha" {
  |              ^^^^^^^ 
  |
  = docs: https://docs.tenzir.com/tql2/operators/load_balance
  = usage: load_balance over:list { … }
